# ms-omni-gateway-policies

./: .gitignore  LICENSE  README.md
a2a-pii-guard-policy/: README.md
a2a-pii-guard-policy/a2a-pii-guard-policy-definition/: README.md  exchange.json  gcl.yaml
a2a-pii-guard-policy/a2a-pii-guard-policy-flex/: .gitignore  Cargo.toml  Makefile  README.md
a2a-pii-guard-policy/a2a-pii-guard-policy-flex/playground/: docker-compose.yaml
a2a-pii-guard-policy/a2a-pii-guard-policy-flex/playground/config/: api-context.yaml  api.yaml  logging.yaml
a2a-pii-guard-policy/a2a-pii-guard-policy-flex/src/: lib.rs
a2a-pii-guard-policy/a2a-pii-guard-policy-flex/tests/: integration.rs
a2a-pii-guard-policy/a2a-pii-guard-policy-flex/tests/common/: mod.rs  request_bodies.rs  setup.rs
instance-id-header-injection/: README.md
instance-id-header-injection/instance-id-header-injection-definition/: Makefile  README.md  exchange.json  gcl.yaml
instance-id-header-injection/instance-id-header-injection-flex/: Cargo.toml  Makefile  README.md
instance-id-header-injection/instance-id-header-injection-flex/playground/: docker-compose.yaml
instance-id-header-injection/instance-id-header-injection-flex/playground/config/: api.yaml
instance-id-header-injection/instance-id-header-injection-flex/src/: lib.rs  unit.rs
instance-id-header-injection/instance-id-header-injection-flex/tests/: header_override.rs  requests.rs  response_passthrough.rs
instance-id-header-injection/instance-id-header-injection-flex/tests/common/: mod.rs  setup.rs
slack-request-verification/: README.md
slack-request-verification/docs/: APPLYING_POLICY.md  LOCAL_TESTING_GUIDE.md
slack-request-verification/slack-request-verification-definition/: HOME.md  README.md  exchange.json  gcl.yaml
slack-request-verification/slack-request-verification-flex/: Cargo.toml  Makefile  README.md
slack-request-verification/slack-request-verification-flex/playground/: docker-compose.yaml
slack-request-verification/slack-request-verification-flex/playground/config/: api-test-scenarios.yaml  api.yaml
slack-request-verification/slack-request-verification-flex/src/: lib.rs
slack-request-verification/slack-request-verification-flex/tests/: requests.rs
slack-request-verification/slack-request-verification-flex/tests/common/: mod.rs
