# Copyright 2026 Salesforce, Inc. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "slack_request_verification"
version = "1.1.0"
rust-version = "1.88.0"
edition = "2018"
resolver = "2"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "00000000-0000-0000-0000-000000000000"
definition_asset_id = { name = "slack-request-verification", version = "1.1.0" }
implementation_asset_id = "slack-request-verification-flex"

[dependencies]
pdk = { version = "1.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"

[dev-dependencies]
pdk-test = { version = "1.8.0" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
